--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="author" content="Eugene Owak">
     <title>Stack Overflow-lite | Welcome</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="UI/css/style.css" />
+    <script src="UI/js/main.js"></script>
 </head>
 
 <body>
