--- a/UI/profile.html
+++ b/UI/profile.html
@@ -10,7 +10,11 @@
     <title>Stack Overflow-lite | Welcome</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
-    <script src="main.js"></script>
+    <script src="./js/main.js"></script>
+    <script>
+        // Get the element with id="defaultOpen" and click on it
+        document.getElementById("defaultOpen").click();
+    </script>
 </head>
 
 <body>
@@ -41,7 +45,47 @@
 
     <section id="main">
         <div class="container">
-            <h1 class="page-title">content for this page is comming up next</h1>
+            <div class="container">
+                <div class="">
+                        <table>
+                            <tr>
+                                <td>
+                                    <img src="./img/img_avatar2.png" alt="Avatar" class="avatar">
+                                </td>
+                                <td>
+                                    <div class="pull-left">
+                                        <h1>username: <input type="text" name="" id=""disabled placeholder="geneowak"></h1>
+                                        <h4 style="margin:0;"> Description</h4>
+                                        <textarea name="" id="" disabled="disabled" rows="10" cols="50">
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut consectetur felis, eu feugiat eros. Cras scelerisque finibus interdum. Aliquam accumsan lectus sed neque tempor blandit. Praesent et sapien ante. Vestibulum condimentum congue nisl et varius. Morbi scelerisque eros sed lorem rhoncus ultrices in quis metus. Duis vel justo elit. Nulla facilisi. Vestibulum acilisis lectus non volutpat hendrerit. Curabitur non viverra neque.
+                                        </textarea>
+                                        <button type="submit">Edit Description</button>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="tab">
+                    <button id="defaultOpen" class="tablinks" onclick="openTab(event, 'questions')">questions</button>
+                    <button class="tablinks" onclick="openTab(event, 'answers')">answers</button>
+                </div>
+                
+                <div id="questions" class="tabcontent">
+                    <div>
+                        sortby: <select name="sort" id="">
+                            <option value="" selected>Most Recent</option>
+                            <option value="">Most Answers</option>
+                        </select>
+                    </div>
+                    <h2>0 Questions.</h2>
+                </div>
+                
+                <div id="answers" class="tabcontent">
+                    <h2>0 Answers.</h2>
+                </div>
+            </div>            
         </div>
     </section>
 
