Added templates for asking questions and viewing a question

--- a/UI/index.html
+++ b/UI/index.html
@@ -33,18 +33,20 @@
 
     <section id="main">
         <div class="container">
-            <h1 class="page-title">Top Questions</h1>
-            <ul id="questions">
+            <h1 class="page-title">Top Questions
+                <button class="pull-right" onclick="window.location.href='ask.html'" style="width: 20%;">Ask a question</button>
+            </h1>
+            <ul id="questions" style="margin-top:30px;">
                 <li>
-                    <h3>How do I become the best programmer in the universe?</h3>
+                    <a href="question.html"><h3>How do I become the best programmer in the universe?</h3></a>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras faucibus quis sapien eu tempor. Suspendisse vestibulum felis vel ornare porttitor. Duis at tellus facilisis, mollis mi sit amet, porta quam. Integer sit amet pellentesque quam, non volutpat lectus. Vivamus hendrerit justo sed augue viverra, elementum maximus tortor vehicula. Donec vitae sem odio. Donec sed eros eu ipsum pulvinar congue. Sed arcu sapien, mollis quis sodales et, pharetra at est.</p>
                 </li>
                 <li>
-                    <h3>How do I join Andela</h3>
+                    <a href="question.html"><h3>How do I join Andela</h3></a>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras faucibus quis sapien eu tempor. Suspendisse vestibulum felis vel ornare porttitor. Duis at tellus facilisis, mollis mi sit amet, porta quam. Integer sit amet pellentesque quam, non volutpat lectus. Vivamus hendrerit justo sed augue viverra, elementum maximus tortor vehicula. Donec vitae sem odio. Donec sed eros eu ipsum pulvinar congue. Sed arcu sapien, mollis quis sodales et, pharetra at est.</p>
                 </li>
                 <li>
-                    <h3>How can I Hack into C.I.A</h3>
+                    <a href="question.html"><h3>How can I Hack into C.I.A</h3></a>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras faucibus quis sapien eu tempor. Suspendisse vestibulum felis vel ornare porttitor. Duis at tellus facilisis, mollis mi sit amet, porta quam. Integer sit amet pellentesque quam, non volutpat lectus. Vivamus hendrerit justo sed augue viverra, elementum maximus tortor vehicula. Donec vitae sem odio. Donec sed eros eu ipsum pulvinar congue. Sed arcu sapien, mollis quis sodales et, pharetra at est.</p>
                 </li>
             </ul>
