Changed site theme and removed inline css

--- a/UI/ask.html
+++ b/UI/ask.html
@@ -17,8 +17,8 @@
     <header>
         <div class="container">
             <div id="branding">
-                <h1 style="margin:0;">Stack Overflow-lite</h1>
-                <h4 style="margin:0">Where all your questions get answered</h4>
+                <h1 class="margin0;">Stack Overflow-lite</h1>
+                <h4 class="margin0">Where all your questions get answered</h4>
             </div>
             <nav>
                 <ul>
@@ -46,9 +46,9 @@
                     <label for="passwd">
                         <b>Body</b><br>
                     </label>
-                    <textarea type="password" placeholder="Enter Text" name="ans" rows="10" cols="50" style="width: 100%" required>
+                    <textarea type="password" placeholder="Enter Text" name="ans" rows="10" cols="50" class="width100" required>
                     </textarea>
-                    <button type="submit" style="width: 40%;">Ask</button>
+                    <button type="submit" class="askbtn">Ask</button>
                 </form>
             </div>
         </div>
