--- a/UI/profile.html
+++ b/UI/profile.html
@@ -21,8 +21,8 @@
     <header>
         <div class="container">
             <div id="branding">
-                <h1 style="margin:0;">Stack Overflow-lite</h1>
-                <h4 style="margin:0">Where all your questions get answered</h4>
+                <h1 class="margin0;">Stack Overflow-lite</h1>
+                <h4 class="margin0">Where all your questions get answered</h4>
             </div>
             <nav>
                 <ul>
@@ -55,7 +55,7 @@
                                 <td>
                                     <div class="pull-left">
                                         <h1>username: <input type="text" name="" id=""disabled placeholder="geneowak"></h1>
-                                        <h4 style="margin:0;"> Description</h4>
+                                        <h4 class="margin0;"> Description</h4>
                                         <textarea name="" id="" disabled="disabled" rows="10" cols="50">
                                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut consectetur felis, eu feugiat eros. Cras scelerisque finibus interdum. Aliquam accumsan lectus sed neque tempor blandit. Praesent et sapien ante. Vestibulum condimentum congue nisl et varius. Morbi scelerisque eros sed lorem rhoncus ultrices in quis metus. Duis vel justo elit. Nulla facilisi. Vestibulum acilisis lectus non volutpat hendrerit. Curabitur non viverra neque.
                                         </textarea>
