--- a/UI/signup.html
+++ b/UI/signup.html
@@ -17,8 +17,8 @@
     <header>
         <div class="container">
             <div id="branding">
-                <h1 style="margin:0;">Stack Overflow-lite</h1>
-                <h4 style="margin:0">Where all your questions get answered</h4>
+                <h1 class="margin0;">Stack Overflow-lite</h1>
+                <h4 class="margin0">Where all your questions get answered</h4>
             </div>
             <nav>
                 <ul>
