--- a/UI/index.html
+++ b/UI/index.html
@@ -15,8 +15,8 @@
     <header>
         <div class="container">
             <div id="branding">
-                <h1 style="margin:0;">Stack Overflow-lite</h1>
-                <h4 style="margin:0">Where all your questions get answered</h4>
+                <h1 class="margin0;">Stack Overflow-lite</h1>
+                <h4 class="margin0">Where all your questions get answered</h4>
             </div>
             <nav>
                 <ul>
@@ -34,9 +34,9 @@
     <section id="main">
         <div class="container">
             <h1 class="page-title">Top Questions
-                <button class="pull-right" onclick="window.location.href='ask.html'" style="width: 20%;">Ask a question</button>
+                <button class="pull-right askbtn" onclick="window.location.href='ask.html'">Ask a question</button>
             </h1>
-            <ul id="questions" style="margin-top:30px;">
+            <ul id="questions">
                 <li>
                     <a href="question.html"><h3>How do I become the best programmer in the universe?</h3></a>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras faucibus quis sapien eu tempor. Suspendisse vestibulum felis vel ornare porttitor. Duis at tellus facilisis, mollis mi sit amet, porta quam. Integer sit amet pellentesque quam, non volutpat lectus. Vivamus hendrerit justo sed augue viverra, elementum maximus tortor vehicula. Donec vitae sem odio. Donec sed eros eu ipsum pulvinar congue. Sed arcu sapien, mollis quis sodales et, pharetra at est.</p>
