--- a/UI/login.html
+++ b/UI/login.html
@@ -17,8 +17,8 @@
     <header>
         <div class="container">
             <div id="branding">
-                <h1 style="margin:0;">Stack Overflow-lite</h1>
-                <h4 style="margin:0">Where all your questions get answered</h4>
+                <h1 class="margin0;">Stack Overflow-lite</h1>
+                <h4 class="margin0">Where all your questions get answered</h4>
             </div>
             <nav>
                 <ul>
@@ -59,7 +59,7 @@
                     <label>
                         <input type="checkbox" checked="checked" name="remember"> Remember me
                     </label>
-                    <div class="container" style="background-color:#f1f1f1">
+                    <div class="container">
                         <button type="button" class="cancelbtn">Cancel</button>
                         <span class="passwd">Forgot
                             <a href="#">password?</a>
